# virtual_alcohol_gallery

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: camera.hpp  collision.hpp  input.hpp  interaction.hpp  model.hpp  postProcessing.hpp  renderer.hpp  scene.hpp  shader.hpp  window.hpp
models/: bottle1.mtl  bottle2.mtl  cigarette.mtl  floor.mtl  stand.mtl  tree.mtl  wine.mtl  wine_no_tx.mtl
shaders/: fragmentDizzy.glsl  fragmentModel.glsl  fragmentPP.glsl  fragmentSandbox.glsl  fragment_model.glsl  vertexModel.glsl  vertexPP.glsl  vertex_model.glsl
src/: camera.cpp  collision.cpp  input.cpp  interaction.cpp  main.cpp  model.cpp  postProcessing.cpp  renderer.cpp  scene.cpp  shader.cpp  window.cpp
